terraform/modules/network/vpc.tf
#1. VPC
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true

  tags = {
    Name  = "${var.project}-vpc-${var.env}"
    Stage = var.env
  }
}

data "aws_availability_zones" "available" {}
